# mola-pointnet-verification

./: .gitattributes  .gitignore  ABCROWN_FIXES.md  LICENSE  README.md  codecov.yml  junit.xml  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  requirements_eran.txt  verification_results.json
configs/: abcrown_pointnet_complete.yaml  verification_config.yaml
docs/: ERAN_VERIFICATION.md  NSGA3_VERIFICATION.md  README.md  index.html  index.md
notebooks/: colab_verification.ipynb  colab_verification_complete.ipynb
report/: report.tex
results/: abcrown_maxpool_verification.json  abcrown_verification_1.json  abcrown_verification_1.md  abcrown_verification_2.json  abcrown_verification_2_comparison.md  eran_python_api_verification.json  eran_verification_1.json  eran_verification_1.md  eran_verification_1_1024_features.md  eran_verification_2.json  eran_verification_2.md  eran_verification_2_comparison.md  training_log.json
runs/: optimized_genome10.all_genomes.npy  optimized_genome10.npy  optimized_genome10.pareto_front.npy  optimized_genome10.pareto_set.npy  optimized_genome10.valid_points.npy  optimized_genome12.npy  optimized_genome12.pareto_front.npy  optimized_genome12.pareto_set.npy  optimized_genome12.valid_points.npy
saved_models/: pointnet_3dcertify_1024.pth  pointnet_3dcertify_1024_api.onnx  pointnet_3dcertify_512f.pth  pointnet_3dcertify_512f_api.onnx  pointnet_3dcertify_64p.pth  pointnet_3dcertify_64p_api.onnx  pointnet_autolirpa_512.pth  pointnet_autolirpa_flat.onnx
scripts/: train_3dcertify_64p.py  train_pointnet_max_64p.py  (+4 more)
(+94 files in other folders)
